--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 runtime: python
-vm: true
-entrypoint: gunicorn -b :$PORT main:app
+env: flex
+entrypoint: gunicorn -b :$PORT tatted_dream/app:app
 
 runtime_config:
-  python_version: 3
+  python_version: 3.7
